add content, add tencent analytics

--- a/template/code.html
+++ b/template/code.html
@@ -54,6 +54,7 @@
         </div>
     </footer>
 </div>
+<script type="text/javascript" src="http://tajs.qq.com/stats?sId=32074356" charset="UTF-8"></script>
 <script src="http://cdn.staticfile.org/jquery/1.10.2/jquery.min.js"></script>
 <script src="http://cdn.staticfile.org/twitter-bootstrap/3.1.1/js/bootstrap.min.js"></script>
 <script src="%root_path%static/highlight/highlight.pack.js"></script>
