--- a/template/default.html
+++ b/template/default.html
@@ -53,6 +53,7 @@
         </div>
     </footer>
 </div>
+<script type="text/javascript" src="http://tajs.qq.com/stats?sId=32074356" charset="UTF-8"></script>
 <script src="http://cdn.staticfile.org/jquery/1.10.2/jquery.min.js"></script>
 <script src="http://cdn.staticfile.org/twitter-bootstrap/3.1.1/js/bootstrap.min.js"></script>
 <script type="text/javascript">
