--- a/template/default.html
+++ b/template/default.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang='zh-CN'>
 <head>
-<title>%title%</title>
+<title>%title% - Noodles 的维基</title>
 <meta http-equiv="Content-Type" content="text/html; charset=%encoding%">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="%root_path%static/css/bootstrap.min.css" media="screen" rel="stylesheet" type='text/css'>
