--- a/template/index.html
+++ b/template/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang='zh-CN'>
 <head>
-<title>%title% - Noodles 的维基</title>
+<title>Noodles 的维基</title>
 <meta http-equiv="Content-Type" content="text/html; charset=%encoding%">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="%root_path%static/css/bootstrap.min.css" media="screen" rel="stylesheet" type='text/css'>
 <link href="%root_path%static/css/bootswatch.min.css" rel="stylesheet" type='text/css'>
 <link href="%root_path%static/css/style.css" rel="stylesheet" type="text/css" >
-<link rel="stylesheet" href="%root_path%static/highlight/styles/solarized_dark.css">
 </head>
 <body>
 <div class="navbar navbar-default navbar-fixed-top">
@@ -57,16 +56,6 @@
 <script type="text/javascript" src="http://tajs.qq.com/stats?sId=32074356" charset="UTF-8"></script>
 <script src="http://cdn.staticfile.org/jquery/1.10.2/jquery.min.js"></script>
 <script src="http://cdn.staticfile.org/twitter-bootstrap/3.1.1/js/bootstrap.min.js"></script>
-<script src="%root_path%static/highlight/highlight.pack.js"></script>
-<script type="text/javascript">
-$(document).ready(function() {
-  $('pre').each(function(i, e) {hljs.highlightBlock(e)});
-});
-hljs.configure({
-        languages: []
-})
-hljs.initHighlightingOnLoad();
-</script>
 <script type="text/javascript">
 
   var _gaq = _gaq || [];
