--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,10 +1,11 @@
 h1, h2, h3, h4, h5, h6 {font-weight: bold; line-height:1.5; margin-top: 1.0em; margin-bottom: 0.5em;}
-pre, code {font-size: 100%;}
+pre, code {font-family: Menlo,Monaco,Consolas,monospace;}
 body,
 input,
 button,
 select,
 textarea,
+h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6,
 .navbar-search .search-query {
     font-family: "Lato","Helvetica Neue",Helvetica,Arial,"Hiragino Sans GB","Microsoft YaHei","WenQuanYi Micro Hei",sans-serif;
 }
